@@ -17,6 +17,10 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+- 23 Oct. 2014 Andrea Dotti - John Apostolakis (particles-V10-00-25)
+- Revised G4ParticlesWorkspace to use new G4TWorkspacePool from global
+- Requires global-V10-00-39
+
 - 23 Oct. 2014 Andrea Dotti - John Apostolakis (particles-V10-00-24)
 - Introduced workspace class for particle definition
 - Revised G4PDefSplitter class to add utility methods  
